--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^5.0.0",
     "react-router-dom": "^6.0.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.17"
   },
   "homepage": "https://iamvaln.github.io/lepodcasttechies",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "export NODE_OPTIONS=--openssl-legacy-provider && npm run build && gh-pages -d build",
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
-    "test": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
